--- a/customer_segments_PT.html
+++ b/customer_segments_PT.html
@@ -12381,7 +12381,7 @@ Score:  -0.295252843611
 <p><strong>Resposta:</strong></p>
 <p>Eu fiz a previsão para todos os atributos e a variação foi muito diferente de um para outro, por isso rodei um loop para fazer a verificação para todos os atributos. O atributo com o melhor score foi Grocery. Outra coisa que me chamou atenção é que a correlação de Detergents_Paper com Grocery é de 0.85 aproximadamente.</p>
 <p>Com esses dados acredito que não podemos dizer que existe uma correlação forte entre todos os produtos. Porém a correlação de Detergents_Paper com Grocery existe e tem um valor considerável.</p>
-<p>Detergents_Paper e Grocery podem ser importante para prever os hábitos de consumo, pois Detergents_Paper explica 86% de Grocery que por sua vez explica 87% de Detergents_Paper.</p>
+<p>Grocery é um atributo importante para prever Detergents_Paper, pois explica 87% de Detergents_Paper.</p>
 
 </div>
 </div>
