--- a/customer_segments_PT.html
+++ b/customer_segments_PT.html
@@ -12379,9 +12379,9 @@ Score:  -0.295252843611
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
 <p><strong>Resposta:</strong></p>
-<p>Eu fiz a previsão para todos os atributos e a variação foi muito diferente de um para outro, por isso rodei um loop para fazer a verificação para todos os atributos. O atributo com o melhor score foi Grocery. Outra coisa que me chamou atenção é que a correlação de Detergents_Paper com Grocery é de 0.85 aproximadamente.</p>
+<p>Eu fiz a previsão para todos os atributos e a variação foi muito diferente de um para outro, por isso rodei um loop para fazer a verificação para todos os atributos. O atributo com o melhor score foi Grocery.</p>
 <p>Com esses dados acredito que não podemos dizer que existe uma correlação forte entre todos os produtos. Porém a correlação de Detergents_Paper com Grocery existe e tem um valor considerável.</p>
-<p>Grocery é um atributo importante para prever Detergents_Paper, pois explica 87% de Detergents_Paper.</p>
+<p>Os produtos que tiveram uma correlação considerável foram Detergents_Paper e Grocery, levando em consideração o quanto um explica o outro podemos dizer que Grocery é importante para explicar o habito de consumo dos clientes uma vez que explica 87% de Detergents_Paper. Dessa forma Detergents_Paper se torna desnecessário na análise, pois a utilização de ambos seria redundante.</p>
 
 </div>
 </div>
